--- a/index.html
+++ b/index.html
@@ -114,6 +114,13 @@
       crossorigin="anonymous"
     />
     <link
+    rel="preload"
+    href="JasonHandwriting5p.woff2"
+    as="font"
+    type="font/woff2"
+    crossorigin="anonymous"
+    />
+    <link
       rel="preload"
       href="/Cascadia.woff2"
       as="font"
